--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
     <groupId>org.brainacad</groupId>
     <artifactId>test-lib</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <properties>
         <maven.compiler.sourse>8</maven.compiler.sourse>
@@ -20,6 +32,15 @@
             <artifactId>guava</artifactId>
             <version>$(guava.version)</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.collections</groupId>
+            <artifactId>google-collections</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
+
+    <profiles>
+
+    </profiles>
 
 </project>
