--- a/pom.xml
+++ b/pom.xml
@@ -30,16 +30,27 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>$(guava.version)</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.collections</groupId>
-            <artifactId>google-collections</artifactId>
-            <version>1.0</version>
+            <version>${guava.version}</version>
         </dependency>
     </dependencies>
 
     <profiles>
+        <profile>
+        <id>prod</id>
+        <properties>
+            <server.url>prod.mycompany.ru</server.url>
+            <test.message>hello from prod</test.message>
+        </properties>
+        </profile>
+
+        <profile><id>dev</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <server.url>prod.mycompany.ru</server.url>
+            </properties>
+        </profile>
 
     </profiles>
 
