--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -1,3 +1,3 @@
 props.local.hello=Local hello
-props.mvn.hello = $(test.message)
-props.server = $(server.url)
+props.mvn.hello =${test.message}
+props.server =${server.url}
